# balldetector

./: .gitignore  CMakeLists.txt
include/: ball_detector.h
src/: ball_detector.cpp  main.cpp
